SF Primes/src/objects/Daily_Narrative__c.object
<CustomObject>
    <description>Child object of the Trip Report, primarily used by the BSC associate to report daily updates about the various deliverables for the onsite install</description>
    <fields>
        <fullName>Associate_s_Manager__c</fullName>
        <description>Field for the manager of the owning BSC</description>
        <formula>Associated_Trip_Report__r.Associate_s_Manager__c</formula>
        <label>Associate&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Trip_Report__c</fullName>
        <description>The Trip Report that is the parent for the narrative record</description>
        <inlineHelpText>If you create &quot;new&quot; from the Trip Report this field will auto-populate.  If Blank due to entry from object tab - please select the Trip Report for this narrative.</inlineHelpText>
        <label>Associated Trip Report</label>
        <referenceTo>Trip_Report__c</referenceTo>
        <relationshipLabel>Daily Narratives</relationshipLabel>
        <relationshipName>Daily_Narratives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BSC_Name__c</fullName>
        <formula>Associated_Trip_Report__r.Owner:User.FirstName &amp; &quot; &quot; &amp;  Associated_Trip_Report__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BSC Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Manager__c</fullName>
        <description>Field to reference the Client Manager on the Trip Report</description>
        <formula>Associated_Trip_Report__r.Client_Manager_for_the_SubProject__c</formula>
        <label>Client Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Field to include the daily comments for the install progress</description>
        <inlineHelpText>Please enter your comments for the day completed</inlineHelpText>
        <label>Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Field used to indicate the date for the comments</description>
        <inlineHelpText>Please select the proper date for the daily narrative.  It will default to today&apos;s date.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <description>Field to indicate the Project Manager for the Trip Report</description>
        <formula>Associated_Trip_Report__r.Project_Manager_for_SubProject__c</formula>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <description>Trip Report&apos;s dealer name</description>
        <formula>Associated_Trip_Report__r.Dealership_Name_CMF__c</formula>
        <label>Site Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trip_Report_Status__c</fullName>
        <description>Field to store the value from the Trip Report Status</description>
        <formula>IF(ISPICKVAL( Associated_Trip_Report__r.Trip_Report_Status__c , &quot;Open&quot;), &quot;Open&quot;, &quot;Closed&quot;)</formula>
        <label>Trip Report Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Why_did_you_work_more_than_10_hours__c</fullName>
        <description>Required response when you have indicated that you worked more than 10 hours in a day</description>
        <inlineHelpText>Please select the reason you worked more than 10 hours for this date.</inlineHelpText>
        <label>Why did you work more than 10 hours?</label>
        <picklist>
            <controllingField>Worked_more_than_10_hours__c</controllingField>
            <picklistValues>
                <fullName>Arrival Day Travel/Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Departure Day Travel/Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Go-Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteered - CDK Staffing Inadequate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteered - Client Preparedness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteered - Personal Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteered - Technical/Software Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work In Process</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Worked_more_than_10_hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>field to indicate if you worked more than 10 hours</description>
        <inlineHelpText>Check the box if you worked more than 10 hours for this entry date</inlineHelpText>
        <label>Worked more than 10 hours</label>
        <type>Checkbox</type>
    </fields>
    <label>Daily Narrative</label>
    <nameField>
        <displayFormat>DN-{0000}</displayFormat>
        <label>Daily Narrative</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Narratives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>IMP_Worked_over_10_hours_reason</fullName>
        <active>true</active>
        <description>Validation rule on the Daily Narrative to require the reason if the worked over 10 hours field is &quot;true&quot;</description>
        <errorConditionFormula>AND(Worked_more_than_10_hours__c = True, ISPICKVAL( Why_did_you_work_more_than_10_hours__c , &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Why_did_you_work_more_than_10_hours__c</errorDisplayField>
        <errorMessage>You must enter a reason if you checked the I worked more than 10 hours checkbox before you can save the record..... [IMP_Worked_over_10_hours_reason]</errorMessage>
    </validationRules>
</CustomObject>